test_files/good/bowsers_rule.ru
( A + B ) | ( C | ( D ^ E ) ) >> ( ( G | A ) = ( F & ( D = E ) ) ) => X
?X
# TRUE
=ABDFE

# (A & (B | ((C(DE^)|)((GA|)(F(DE=)&)=)>>)))