test_files/bad/or_right.ru
a | b + C ^ D => E | F